--- a/public/index.html
+++ b/public/index.html
@@ -1,33 +1,20 @@
 <!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<html lang="en">
 
-    <!-- Favicon & App Icons -->
-    <!-- Rename your file to public/favicon.ico or adjust the href below -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <!-- Viewport / Theme -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#f6c1c1" />
-    <meta name="color-scheme" content="light only" />
-
-    <!-- Primary Meta -->
-    <title>MiniGlowbyShay | Soins visage & beauté</title>
-    <meta
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/faviconn.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+      <meta
       name="description"
       content="MiniGlowbyShay — soins The Ordinary et routines efficaces pour l’hydratation, l’éclat et la réparation. Livraison rapide partout au Maroc."
     />
-    <meta
+ <meta
       name="keywords"
       content="MiniGlowbyShay, The Ordinary Maroc, skincare, soins visage, sérum, hydratation, éclat, beauté"
     />
-    <link rel="canonical" href="https://miniglowbyshay.cloud/" />
+   <link rel="canonical" href="https://miniglowbyshay.cloud/" />
 
     <!-- Open Graph (Facebook/Instagram/WhatsApp previews) -->
     <meta property="og:type" content="website" />
@@ -37,54 +24,45 @@
       property="og:description"
       content="Safe, effective routines for hydration, brightening and repair — shipped fast."
     />
-    <meta property="og:url" content="https://miniglowbyshay.cloud/" />
-    <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="MiniGlowbyShay | Soins visage & beauté" />
-    <meta
-      name="twitter:description"
-      content="Routines efficaces pour l’hydratation, l’éclat et la réparation. Livraison rapide au Maroc."
-    />
-    <meta name="twitter:image" content="%PUBLIC_URL%/og-image.jpg" />
 
-    <!-- Optional: structured data (Organization) -->
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "MiniGlowbyShay",
-        "url": "https://miniglowbyshay.cloud/",
-        "logo": "%PUBLIC_URL%/logo512.png",
-        "contactPoint": [{
-          "@type": "ContactPoint",
-          "telephone": "+212 6 56 44 38 66",
-          "contactType": "customer service",
-          "areaServed": "MA"
-        }]
-      }
-    </script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
 
-    <!-- Bootstrap -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
-      crossorigin="anonymous"
-    />
+  <!-- fontawesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
-    <!-- FontAwesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
-  </head>
+  <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
 
-  <body>
-    <noscript>Vous devez activer JavaScript pour exécuter cette application.</noscript>
-    <div id="root"></div>
-  </body>
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+  <title>MiniGlowbyshay</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
+</body>
+
 </html>
