--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,20 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff" />
+
+    <!-- ====== BASIC SEO ====== -->
+    <title>MiniGlow by Shay</title>
+    <meta
+      name="application-name"
+      content="MiniGlow by Shay"
+    />
     <meta
       name="description"
       content="MiniGlow by Shay — safe, effective routines for hydration, brightening and barrier repair — shipped fast."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <!-- Canonical -->
     <link rel="canonical" href="https://miniglowbyshay.cloud/" />
 
-    <!-- Open Graph -->
+    <!-- ====== OPEN GRAPH / FACEBOOK ====== -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://miniglowbyshay.cloud/" />
     <meta property="og:title" content="MiniGlow by Shay" />
@@ -28,7 +31,7 @@
       content="https://miniglowbyshay.cloud/brand/logop.png"
     />
 
-    <!-- Twitter -->
+    <!-- ====== TWITTER ====== -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="MiniGlow by Shay" />
     <meta
@@ -40,7 +43,11 @@
       content="https://miniglowbyshay.cloud/brand/logop.png"
     />
 
-    <!-- (optional) Bootstrap / FontAwesome you already use -->
+    <!-- ====== PWA ====== -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- ====== STYLES ====== -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -52,11 +59,24 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
 
-    <title>MiniGlow by Shay</title>
+    <!-- ====== STRUCTURED DATA ====== -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "MiniGlow by Shay",
+        "url": "https://miniglowbyshay.cloud/",
+        "description": "Safe, effective routines for hydration, brightening and barrier repair — shipped fast."
+      }
+    </script>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <!-- ====== MAIN SCRIPTS ====== -->
+    <!-- Your CRA build will inject JS bundles here automatically -->
   </body>
 </html>
 
