--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="MiniGlow by Shay — safe, effective routines for hydration, brightening and barrier repair — shipped fast."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoz.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logov.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Canonical -->
@@ -25,7 +25,7 @@
     />
     <meta
       property="og:image"
-      content="https://miniglowbyshay.cloud/brand/logop.png"
+      content="https://miniglowbyshay.cloud/brand/logov.png"
     />
 
     <!-- Twitter -->
@@ -37,7 +37,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://miniglowbyshay.cloud/brand/logop.png"
+      content="https://miniglowbyshay.cloud/brand/logov.png"
     />
 
     <!-- (optional) Bootstrap / FontAwesome you already use -->
